# notification_manager

./: notification_export_20260205-215849.json  notifications.ndjson  text.txt
campaign/: README.md  pyproject.toml  requirements.txt
campaign/examples/: device_notifications_example.ndjson  scenario_example.json
campaign/scripts/: android_setup.md  run_android_example.sh  run_report_example.ps1
campaign/src/campaign/: __init__.py  cli.py  hafas_gate.py  io.py  matching.py  models.py  notification_log.py  poll.py  report.py  subscribe.py
campaign/tests/: test_cli_hafas.py  test_matching.py  test_notification_log.py  test_polling_stop.py
